@@ -1,5 +1,9 @@
 ---
 title: Configuration Parameters Index (nuxeo.conf)
+review:
+    comment: ''
+    date: ''
+    status: ok
 labels:
     - launcher
     - properties
@@ -802,6 +806,780 @@ Those parameters can be either environment parameters used by Nuxeo runtime or t
 _Looking for a specific parameter?_
 
 {{! table-filter removed }}
+
+Parameter
+
+Default value ("|" separates possible values)
+
+Description
+
+`JAVA_HOME`
+
+None.
+If undefined nuxeoctl script will try to discover it.
+
+Path to Java home directory.
+
+`JAVA_OPTS`
+
+`-Xms512m -Xmx1024m -XX:MaxPermSize=512m`
+`-Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000`
+`-Dfile.encoding=UTF-8`
+
+Optional values passed to the JVM.
+Nuxeo requires at least 1024 Mo in JVM heap size and 256Mo as maximum permanent size (512 recommended).
+Decreasing garbage collector frequency avoid having too much CPU usage (Sun Java specific options, recommended by JBoss).
+
+`launcher.start.max.wait`
+
+300
+
+In seconds. Maximum time to wait for effective Nuxeo server start before giving up (applies on commands "start" and "restart").
+
+`launcher.stop.max.wait`
+
+60
+
+In seconds. Maximum time to wait for effective Nuxeo server stop cleanly before using forced stop.
+
+`launcher.override.java.tmpdir`
+
+true
+
+Possible values: `true` or `false`
+If true, will set `java.io.tmpdir =` `nuxeo.tmp.dir`.
+
+`nuxeo.log.dir`
+
+log
+
+Log directory (absolute or relative to `NUXEO_HOME`).
+Linux recommended path: `/var/log/nuxeo/...`
+
+`nuxeo.pid.dir`
+
+bin
+
+Directory where to store Nuxeo PID file.
+
+`nuxeo.data.dir`
+
+data
+
+Data directory (absolute or relative to NUXEO_HOME). It involves all data not being stored in database.
+Linux recommended path: `/var/lib/nuxeo/...`
+
+`nuxeo.tmp.dir`
+
+`server/default/tmp` (JBoss)
+`temp` (Tomcat)
+`tmp` (Jetty)
+
+Location of the temporary files.
+
+`nuxeo.mp.dir` `packages` Since Nuxeo 5.9.4\. Nuxeo Packages directory.
+
+`nuxeo.force.generation`
+
+`true` | `once`
+
+If "`true`", will force generation of configuration files; otherwise they are only generated when not existing.
+If "`once`", will force one time and switch to false after successful generation.
+If "`false`", configuration changes are ignored.
+
+`nuxeo.templates`
+
+default
+
+Comma separated list of templates to include.
+Templates paths are absolute or relative to `$NUXEO_HOME/templates/`.
+Available templates: postgresql, mysql, mssql, oracle, custom, ...
+
+`nuxeo.bind.address`
+
+0.0.0.0
+
+Server binding address. "0.0.0.0" means "all available network interfaces".
+WARNING: when changing `nuxeo.bind.address`, you must accordingly change `nuxeo.loopback.url`.
+
+`nuxeo.server.http.port`
+
+8080
+
+Server HTTP listen port.
+
+`nuxeo.server.ajp.port`
+
+8009
+
+Server AJP listen port.
+This is not available on Jetty.
+
+`nuxeo.server.jvmRoute`
+
+nuxeo
+
+Server AJP route for load-balancing
+
+`nuxeo.server.tomcat-admin.port`
+
+8005
+
+Deprecated since Nuxeo 5.6\. Tomcat server's "admin" port.
+This is only useful if you have another tomcat server running and want to avoid port conflicts.
+
+`nuxeo.server.tomcat_admin.port`
+
+8005
+
+Since Nuxeo 5.6\. Tomcat server's "admin" port.
+This is only useful if you have another tomcat server running and want to avoid port conflicts.
+
+`nuxeo.server.https.port`
+
+8443
+
+Server HTTPS listen port.
+This is only useful if you have modified the application server to use HTTPS.
+
+`nuxeo.server.emptySessionPath`
+
+false
+
+(Tomcat only) Since Nuxeo 5.5, until 5.7.1\. If set to true, all paths for session cookies will be set to /.
+May be useful to enable authentication on proxyfied WebEngine applications (see [HTTP and HTTPS Reverse-Proxy Configuration]({{page page='http-and-https-reverse-proxy-configuration'}})).
+Removed since Nuxeo 5.7.2 (see [http://tomcat.apache.org/migration-7.html#Session_cookie_configuration](http://tomcat.apache.org/migration-7.html#Session_cookie_configuration)).
+
+`nuxeo.server.signature` None (Tomcat only) Since Nuxeo 6.0\. If set, this will replace the default value of the "Server:" HTTP response header.
+
+`org.nuxeo.ecm.instance.name`
+
+Nuxeo 5.9.3-SNAPSHOT
+
+Server name.
+
+`org.nuxeo.ecm.instance.description`
+
+Nuxeo
+
+Server description.
+
+`org.nuxeo.ecm.product.name`
+
+Nuxeo Platform
+
+Product name, displayed in the page title on your browser.
+
+`org.nuxeo.ecm.product.version`
+
+5.9.3-SNAPSHOT &nbsp; {{> anchor 'orgnuxeodev'}} `org.nuxeo.dev`
+
+&nbsp;
+
+false
+
+Since Nuxeo 5.6, this property uses the "dev" mode when running the Nuxeo application. This parameter should not be set to `true` on a production server, as it disables some caches, and enables hot redeploy of some JARs (Studio JARs for instance). For more information about the dev mode, see [How to do incremental deployment (hot reload) in the JSF-Seam layer]({{page space='corg' page='supporting-hot-reload'}}).
+
+Before 5.6, setting this property to true stopped the runtime when an error occured at deployment. This behaviour has been removed from the dev mode and is now controlled by the property `org.nuxeo.runtime.strict`.
+
+`org.nuxeo.prod` false Since Nuxeo 5.8, setting this property to "true" will display a quite visible warning message in the Admin tab, stating that this is a production instance. This is useful for administrators who are sometimes confusing their Nuxeo production server with their test server (not to rat anyone out). {{! multiexcerpt name='org.nuxeo.automation.trace'}}
+
+`org.nuxeo.rest.stack.enable`
+
+{{! /multiexcerpt}} {{! multiexcerpt name='org.nuxeo.automation.trace-default'}}
+
+false
+
+{{! /multiexcerpt}}
+
+Since Nuxeo 6.0, you can enable this mode if you'd like to display exception stacktraces in JSON response when error occurs after REST calls.
+
+See [Web Exceptions documentation]({{page space='nxdoc60' page='web-exceptions-errors'}}) to get modes description and examples.
+
+{{! multiexcerpt name='org.nuxeo.automation.trace'}}
+
+`org.nuxeo.automation.trace`
+
+{{! /multiexcerpt}} {{! multiexcerpt name='org.nuxeo.automation.trace-default'}}
+
+false
+
+{{! /multiexcerpt}}
+
+Enable this mode if you'd like to display automation traces during runtime:
+
+{{! multiexcerpt name='org.nuxeo.automation.trace-description'}}
+
+*   You'll benefit from exhaustive logs to debug all automation chain and/or operation execution.
+*   The automation trace mode is disabled by default (not suitable for production).
+*   It can be activated through JMX via `org.nuxeo:TracerFactory` MBean during runtime.
+
+{{! /multiexcerpt}} {{! multiexcerpt name='org.nuxeo.automation.trace.printable'}}
+
+`org.nuxeo.automation.trace.printable`
+
+{{! /multiexcerpt}} {{! multiexcerpt name='org.nuxeo.automation.trace.printable-default'}}
+
+*
+
+{{! /multiexcerpt}} {{! multiexcerpt name='org.nuxeo.automation.trace.printable-description'}}
+
+By default, all automation executions are 'printable' (appear in logs) when automation trace mode is on.
+
+*   You can filter chain and/or operation execution trace printing by setting this property to chain name and/or operation separated by comma.
+*   Comment this property to get all automation chains/operations back in printing (by default set to * (star))
+
+{{! /multiexcerpt}} `studio.snapshot.disablePkgValidation` false This property makes it possible to disable the Studio snapshot package validation from the Admin tab (there was no validation before). Defaults to `false`.
+
+`org.nuxeo.ecm.webapp.dashboard.mode`
+
+auto
+
+DEPRECATED since Nuxeo 6.0
+
+Defines the dashboard mode. There are three modes:
+
+*   `auto`: (default value) let Nuxeo choose dashboard based on user browser capabilities.
+*   `old`: force usage of the 'old' JSF based dashboard for all users.
+*   `opensocial`: force usage of the new OpenSocial based dashboard for all users.
+
+`_templateName_.target`
+
+`server/default/deploy/nuxeo.ear`
+
+Directory where _templateName_ files will be deployed.
+
+`mailservice.user`
+
+nobody
+
+(JBoss only) User for e-mail authentication.
+
+`mailservice.password`
+
+password
+
+(JBoss only) Password for e-mail authentication.
+
+`mail.store.protocol`
+`mail.transport.protocol`
+
+pop3
+smtp
+
+Server protocol parameters for e-mailing.
+
+`mail.user`
+
+nobody
+
+User who will receive e-mail (unused in Nuxeo).
+
+`mail.store.host`
+
+localhost
+
+e-Mail server.
+
+`mail.store.user`
+
+anonymous
+
+&nbsp;
+
+`mail.store.password`
+
+password
+
+&nbsp;
+
+`mail.debug`
+
+false
+
+Enable debugging output from the JavaMail classes.
+
+`nuxeo.notification.eMailSubjectPrefix`
+
+[Nuxeo]
+
+Subject prefix in Nuxeo notification e-mails.
+
+`nuxeo.notification.eMailSigner` The Nuxeo team Signer of the sent e-mail.
+
+`mail.transport.host`
+
+localhost
+
+SMTP gateway server.
+
+`mail.transport.port`
+
+25 (without authentication)
+587 (with authentication)
+465 (SSL)
+
+e-Mail server port.
+
+`mail.transport.usetls`
+
+false
+
+Use TLS for the SMTP connection.
+
+`mail.transport.auth`
+
+true
+
+&nbsp;
+
+`mail.transport.user`
+
+anonymous
+
+&nbsp;
+
+`mail.transport.password`
+
+password
+
+&nbsp;
+
+`mail.from`
+
+noreply@nuxeo.com
+
+The e-mail address will be sent from.
+
+`nuxeo.db.name`
+
+nuxeo | NUXEO
+
+Database name.
+
+`nuxeo.db.user`
+
+sa | nuxeo
+
+Database username.
+
+`nuxeo.db.password`
+
+(empty value) | password
+
+Database password.
+
+&nbsp;
+
+`nuxeo.db.host`
+
+localhost
+
+Database host URL.
+
+`nuxeo.db.port`
+
+3700 (DB2)
+
+5432 (PostgreSQL)
+3306 (MySQL)
+1521 (Oracle)
+1433 (MSSQL)
+
+Database host port.
+
+`nuxeo.db.jdbc.url`
+
+(database-dependent)
+
+Database JDBC connection URL for Nuxeo datasources, for instance `jdbc:postgresql://${nuxeo.db.host}:${nuxeo.db.port}/${nuxeo.db.name`}.
+
+`nuxeo.db.validationQuery`
+
+&nbsp;
+
+Database validation query, a `SELECT` statement used to check connections before using them, usually `SELECT 1`. Using this has a noticeable speed impact but makes connections resilient to network or sever problems.
+
+`nuxeo.db.min-pool-size`
+
+5
+
+Database minimum pool size for Nuxeo datasources.
+
+`nuxeo.db.max-pool-size`
+
+20 (JBoss)
+100 (Tomcat)
+
+Database maximum pool size for Nuxeo datasources.
+
+`nuxeo.db.idle-timeout-minutes` 0 (no timeout) Since Nuxeo 6.0\. Database timeout after which connections not in use are removed from the pool.
+
+`nuxeo.db.embeddedDatasources`
+
+true
+
+Embed datasources in nuxeo runtime `nuxeo.db.xaMode` false Enable XA mode (required if multiple datasources configured)
+
+`nuxeo.vcs.min-pool-size`
+
+0
+
+Database minimum pool size for Nuxeo repository (VCS).
+
+`nuxeo.vcs.max-pool-size`
+
+20
+
+Database maximum pool size for Nuxeo repository (VCS).
+
+```
+nuxeo.vcs.blocking-timeout-millis
+```
+
+100
+
+Since Nuxeo 5.8\. Database maximum wait time to get a connection from the pool when all connections are in use, for Nuxeo repository (VCS).
+
+`nuxeo.vcs.idle-timeout-minutes`
+
+10
+
+Since Nuxeo 5.8\. Database timeout after which connections not in use are removed from the pool, for Nuxeo repository (VCS).
+
+`nuxeo.vcs.fulltext.disabled`
+
+false Since Nuxeo 5.8\. Whether full text indexing and querying should be completely disabled in the repository. See [VCS Configuration]({{page page='vcs-configuration'}}) for details.
+
+`nuxeo.vcs.fulltext.search.disabled`
+
+false Since Nuxeo 6.0\. Full text querying from VCS (database backend) is disabled, full text extraction is done. See [Repository Configuration]({{page space='nxdoc' page='repository-configuration'}}) for details. `nuxeo.vcs.noddl` false Since Nuxeo 5.8\. Where DDL generation should be disabled in the repository. See [VCS Configuration]({{page page='vcs-configuration'}}) for details. `nuxeo.vcs.idtype` varchar Since Nuxeo 5.8\. The type of `id` column. See [VCS Configuration]({{page page='vcs-configuration'}}) for details.
+
+`nuxeo.url`
+
+[http://localhost:8080/nuxeo](http://localhost:8080/nuxeo)
+
+Application URL (without final slash), should be the public URL of your server (i.e.: [http://www.yourdomain.com/](http://www.yourdomain.com/)....)
+
+`nuxeo.loopback.url`
+
+[http://localhost:8080/nuxeo](http://localhost:8080/nuxeo)
+
+Nuxeo URL, for connections from Nuxeo to itself (theme banks default). The port should be the same as `nuxeo.server.http.port.`
+
+If not explicitly configured, the loop back URL is generated from `nuxeo.bind.address`, `nuxeo.server.http.port` and `org.nuxeo.ecm.contextPath` values.
+
+`org.nuxeo.ecm.contextPath`
+
+/nuxeo
+
+Application context path.
+Before 5.6, you also have to accordingly rename all occurrences of nuxeo.xml (for Tomcat)
+
+Note: Changing this parameter is not enough. See [How to Change Context Path]({{page page='how-to-change-context-path'}})
+
+`org.nuxeo.ecm.platform.transform.ooo.host.name`
+
+127.0.0.1
+
+DEPRECATED.
+
+`org.nuxeo.ecm.platform.transform.ooo.host.port`
+
+8100
+
+DEPRECATED.
+
+`org.nuxeo.ecm.platform.transform.ooo.version`
+
+2.2.1
+
+DEPRECATED.
+
+`org.nuxeo.ecm.platform.transform.ooo.enableDaemon`
+
+true
+
+DEPRECATED.
+
+`jod.connection.protocol`
+
+SOCKET
+
+OpenOffice Connection protocol, either PIPE or SOCKET.
+
+`jod.max.tasks.per.process`
+
+200
+
+Maximum task per Office instance before restarting it.
+
+`jod.task.execution.timeout`
+
+120000
+
+Will stop the task if it s not completed after timeout.
+
+`jod.task.queue.timeout`
+
+30000
+
+Will stop looking for the next task in the queue after timeout.
+
+`jod.office.home`
+
+&nbsp;
+
+Home directory of OpenOffice or LibreOffice.
+
+`jod.office.ports`
+
+2003
+
+When running in SOCKET mode, comma-separated list of ports used for the office connection.
+
+`jod.office.pipes`
+
+&nbsp;
+
+When running in PIPE mode, comma-separated list of pipe names used for the office connection.
+
+`jod.jpipe.lib.path`
+
+&nbsp;
+
+Path to Jpipe library. Only used when connecting to OO through PIPE.
+
+`jod.template.profile.dir`
+
+&nbsp;
+
+Path to custom OO template directory.
+
+`opensocial.gadgets.host`
+
+localhost
+
+DEPRECATED since Nuxeo 6.0
+
+`opensocial.gadgets.port`
+
+8080
+
+DEPRECATED since Nuxeo 6.0
+
+`opensocial.proxy.proxySet`
+
+false
+
+DEPRECATED since Nuxeo 5.6
+
+`opensocial.proxy.proxyHost`
+
+&nbsp;
+
+DEPRECATED since Nuxeo 5.6 (use default `nuxeo.http.proxy.host`)
+
+`opensocial.proxy.proxyPort`
+
+&nbsp;
+
+DEPRECATED since Nuxeo 5.6 (use default `nuxeo.http.proxy.port`)
+
+`opensocial.proxy.user`
+
+&nbsp;
+
+DEPRECATED since Nuxeo 5.6 (use default `nuxeo.http.proxy.login`)
+
+`opensocial.proxy.password`
+
+&nbsp;
+
+DEPRECATED since Nuxeo 5.6 (use default `nuxeo.http.proxy.password`)
+
+`repository.clustering.enabled`
+
+false
+
+Activate clustering mode.
+
+`repository.clustering.delay`
+
+1000
+
+When clustering is activated, defines the delay during which invalidations don't need to be processed (expressed in milliseconds).
+
+`repository.binary.store`
+
+&nbsp;
+
+Defines the folder where binaries are stored. Useful when using clustering or to change the location of binaries to another location.
+
+`nuxeo.core.binarymanager` &nbsp; Custom class for the Binary Manager, to replace the default file-base storage. `nuxeo.core.binarymanager_key` &nbsp; Since Nuxeo 6.0\. Key configuration for the binary manager, if applicable.
+
+`nuxeo.templates.parsing.extensions`
+
+xml,properties
+
+Deprecated since Nuxeo 5.6\. Files extensions being parsed for parameters replacement when copying templates.
+
+`nuxeo.plaintext_parsing_extensions`
+
+xml,properties
+
+Since Nuxeo 5.6\. Files extensions being parsed for parameters replacement when copying templates.
+
+`org.nuxeo.ecm.jboss.configuration`
+
+default
+
+JBoss configuration to use (`default`, `minimal`, `all`, ...)
+Pay attention to the fact that this won't apply to templates defining their own `_template_.target` value (for instance, "default" template sets `default.target=server/default/deploy` without being aware of `org.nuxeo.ecm.jboss.configuration` value).
+
+`zip.entry.encoding`
+
+ascii
+
+Choose how to encode filename when exporting documents to zip in the worklist.
+
+`org.nuxeo.ecm.platform.liveedit.autoversioning`
+
+none,minor,major
+
+see [Configuration Examples]({{page page='configuration-examples'}})
+
+`nuxeo.wizard.done`
+
+true or false depending on the package
+
+If set to false, will start a setup wizard before starting Nuxeo.
+
+`nuxeo.http.proxy.host`
+
+&nbsp;
+
+HTTP proxy host.
+
+`nuxeo.http.proxy.port`
+
+&nbsp;
+
+HTTP proxy port.
+
+`nuxeo.http.proxy.login`
+
+&nbsp;
+
+HTTP proxy login.
+
+`nuxeo.http.proxy.password`
+
+&nbsp;
+
+HTTP proxy password.
+
+`nuxeo.http.proxy.ntlm.host` &nbsp; NT Lan Manager (NTLM) Proxy. Host name of the Windows machine running the Nuxeo server. `nuxeo.http.proxy.ntlm.domain` &nbsp; NT Lan Manager (NTLM) Proxy. Domain name to authenticate against. `nuxeo.http.proxy.pac.url` &nbsp; Since Nuxeo 5.9.3\. Proxy auto-config (PAC) file URL.
+
+`facelets.REFRESH_PERIOD`
+
+-1
+
+Indicates to the compiler the number of seconds to wait between subsequent checks for changes in modified JSF facelets in a running application. Useful for facelet debugging.
+To disable this compiler check use a value of -1 which is a recommended value for production deployments as compiler checks have an impact on application performance.
+
+Since Nuxeo 5.6, the parameter [`undefined`](#orgnuxeodev) should be used instead as it forces this parameter to value "2".
+
+`nuxeo.db.transactiontimeout`
+
+300
+
+Database transaction timeout in seconds (available for server tomcat only)
+
+`server.status.key`
+
+&nbsp;
+
+Secure key for connecting to server status monitoring servlet. It is randomly generated if not set.
+
+`session.timeout`
+
+60
+
+Session timeout (see [web.xml session-timeout](http://www.google.com/search?q=web.xml+session-timeout)).
+
+`nuxeo.updatecenter.disabled`
+
+false (unset)
+
+Disables the Update Center feature.
+
+`theme.useOldLocalConfiguration`
+
+false (unset)
+
+Uses the old local configuration for theme, selecting a theme page instead of a flavor.
+
+`org.nuxeo.big.file.size.limit`
+
+5Mi (unset)
+
+Redirects onto the big file download URL if size exceeds limit.
+
+`org.nuxeo.ecm.platform.ui.web.auth`
+`.NuxeoAuthenticationFilter.isLoginNotSynchronized`
+
+false (unset)
+
+Disables login synchronization.
+
+`nuxeo.wizard.packages.url`
+
+&nbsp;
+
+Defines the base URL used by the Setup Wizard to get the packages.xml file describing the available software packages options.
+
+`nuxeo.wizard.skippedpages`
+
+null
+
+Comma separated list of pages that should be skipped inside the wizard.
+
+`nuxeo.pageprovider.default-max-page-size`
+
+100
+
+Since Nuxeo 5.6 (5.5-HF06 and 5.4.2-HF20), defines the default maxPageSize to use in pageProvider when no value is defined in the pageProvider contribution. Value '0' means no limit.
+
+`org.nuxeo.dnd.upload.timeout` 30000 Since Nuxeo 5.7.1 (5.6-HF08), maximum time for uploading a file via Drag & Drop to the server. `org.nuxeo.dnd.exec.timeout` 30000 Since Nuxeo 5.7.1 (5.6-HF08), maximum time for executing import of files uploaded via Drag & Drop `org.nuxeo.dnd.extendedmode.timeout` 2000 Since Nuxeo 5.7.1 (5.6-HF08), mouse over time before switching to extended mode UI (setting to -1 disables the extended mode) `org.nuxeo.query.builder.ignored.chars` !#$%&'()+,./\\\\:-@{|}`^~ Characters that are escaped in queries `nuxeo.ui.displayEmailInUserSuggestion` false (unset) Since Nuxeo 5.9.1, display emails in user suggestion widgets. This parameter replace the nuxeo-email-suggestion addon provided in Nuxeo 5.5 and 5.6. `<span style="color: rgb(34,34,34);">nuxeo.jsf.</span> <span style="color: rgb(34,34,34);">numberOfConversationsInSession</span>` 4 Since Nuxeo 5.7.2, Parameter to control the number of conversation states that are saved in session. Each conversation holds a number of view states that is defined by `nuxeo.jsf.numberOfViewsInSession` `nuxeo.jsf.numberOfViewsInSession` 4 Since Nuxeo 5.7.2 (5.6-HF20) Parameter to control the JSF init parameter `com.sun.faces.numberOfViewsInSession` `nuxeo.jsf.numberOfLogicalViews` 4 Since Nuxeo 5.7.2 (5.6-HF20) Parameter to control the JSF init parameter `com.sun.faces.numberOfLogicalViews`
+
+`nuxeo.jsf.enableDoubleClickShield`
+
+true (unset) Since Nuxeo 5.7.3\. Enable a shield on forms to prevent users from submitting twice the same form (accidental double-click). Default value was false in 5.7.3 and is true since Nuxeo 5.8.
+
+`nuxeo.jsf.useAjaxTabs`
+
+false (unset) Since Nuxeo 5.8\. Enable ajaxified tabs on document views. Activation also relies on the user's browser because this feature requires manipulating the browser's session history in JavaScript to preserve bookmarkable URLs (see compatibility table at [http://caniuse.com/#search=pushstate](http://caniuse.com/#search=pushstate), for instance). `<span style="color: rgb(34,34,34);">nuxeo.jsf.tmp.dir</span>` <span style="color: rgb(34,34,34);">`nuxeo.tmp.dir` (unset)</span> <span style="color: rgb(34,34,34);">Since Nuxeo 6.0\. Faces Servlet multi-part config: <span style="color: rgb(0,0,0);">an absolute path to a directory on the file system. The&nbsp;</span>location<span style="color: rgb(0,0,0);">&nbsp;attribute does&nbsp;</span>**not**<span style="color: rgb(0,0,0);">&nbsp;support a path relative to the application context. This location is used to store files temporarily while the parts are processed or when the size of the file exceeds the specified&nbsp;</span>fileSizeThreshold<span style="color: rgb(0,0,0);">&nbsp;setting. The default location is&nbsp;</span>""<span style="color: rgb(0,0,0);">.</span></span> `<span style="color: rgb(34,34,34);">nuxeo.jsf.</span><span style="color: rgb(34,34,34);">maxFileSize</span>` -1 (unlimited) (unset) <span style="color: rgb(34,34,34);">Since Nuxeo 6.0\. Faces Servlet multi-part config: <span style="color: rgb(0,0,0);">&nbsp;the maximum size allowed for uploaded files, in bytes</span><span style="color: rgb(0,0,0);">. The default size is unlimited.</span></span> `<span style="color: rgb(34,34,34);">nuxeo.jsf.</span><span style="color: rgb(34,34,34);">maxRequestSize</span>` -1 (unlimited) (unset) <span style="color: rgb(34,34,34);">Since Nuxeo 6.0\. Faces Servlet multi-part config: t<span style="color: rgb(0,0,0);">he maximum size allowed for a&nbsp;</span>multipart/form-data<span style="color: rgb(0,0,0);">&nbsp;request, in bytes. The default size is unlimited.</span></span> `<span style="color: rgb(34,34,34);">nuxeo.</span><span style="color: rgb(34,34,34);">jsf.fileSizeThreshold</span>` 0 (unset) <span style="color: rgb(34,34,34);">Since Nuxeo 6.0\. Faces Servlet multi-part config: <span style="color: rgb(0,0,0);">The file size in bytes after which the file will be temporarily stored on disk. The default size is 0 bytes.</span></span>
+
+`nuxeo.vcs.use-nulls-last-on-desc`
+
+true (unset)
+
+Since Nuxeo 5.8\. Ask the database to use "NULLS LAST" when sorting DESC. True by default to get the same result order between different databases.
+
+Also turning this option to false enable PostgreSQL and Oracle to use an index on the sorted column which can be huge performance improvement.
+
+&nbsp;
+
+`nuxeo.path.segment.maxsize`
+
+24 Since Nuxeo 5.9.3\. Define the max length of the document name, which is mainly used to build the document path. `org.nuxeo.connect.connector.cache.duration` 60min (5min for Studio packages) Since Nuxeo 5.6\. Nuxeo Packages list cache (in minutes). `org.nuxeo.connect.server.reachable` true Since Nuxeo 5.7\. Launcher online/offline mode for connections to Nuxeo Connect. `org.nuxeo.connect.url` [https://connect.nuxeo.com/nuxeo/site/](https://connect.nuxeo.com/nuxeo/site/) Nuxeo Connect URL. `nuxeo.automation.properties.multiline.escape` false
+
+Enable/Disable multi-line strings escaped with a trailing \ when using `Document.Update` or `Workflow.SetWorkflowVariables` Automation operations.
+
+`org.nuxeo.cmis.joins`
+
+false Since Nuxeo 6.0\. When true, CMISQL JOINs are allowed if VCS is used. `nuxeo.logs.viewer.max.lines.count` 1500 Since Nuxeo 6.0\. Configure the number of lines displayed for each server log files in the Admin tab > Monitoring > Logs tab `org.nuxeo.ecm.platform.query.nxql.defaultNavigationResults` 200 Since Nuxeo 5.6\. [Maximum number of results for page providers]({{page space='nxdoc60' page='content-views#maxresults'}}). `nuxeo.text.annotations` false Since Nuxeo 6.0\. When true, enable the annotations also on text files, otherwise annotations are only available on images. `nuxeo.security.allowNegativeACL` false Since Nuxeo 6.0\. When true, enables adding negative ACL (deny permissions) in the UI, otherwise only grant permissions are available. `nuxeo.redis.enabled` false Set to true to activate Redis. `nuxeo.redis.host` redishost &nbsp; `nuxeo.redis.port` 6379 &nbsp; `nuxeo.redis.password` &nbsp; &nbsp; `nuxeo.redis.database` 0 &nbsp; `nuxeo.redis.prefix` nuxeo: &nbsp; `nuxeo.redis.timeout` 2000 &nbsp; `nuxeo.redis.maxTotal` 16 The maximum size of the Redis connections pool. (Since Nuxeo 6.0-HF27) `nuxeo.redis.maxIdle` 8 The maximum number of Redis idle connections in the pool. (Since Nuxeo 6.0-HF27)
 
 &nbsp;
 
